0.22 compatible version
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>